--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,6 +18,9 @@ env:
 jobs:
   rust:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: src-tauri
     steps:
       - uses: actions/checkout@v4
 
@@ -98,9 +101,6 @@ jobs:
 
   typescript:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: gui
     steps:
       - uses: actions/checkout@v4
 
