--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,17 @@ tauri-build = { version = "2.0.0-alpha", features = [] }
 tauri = { version = "2.0.0-alpha", features = [] }
 tauri-plugin-shell = "2.0.0-alpha"
 serde_json = "1.0"
+tokio = { version = "1.28.2", features = ["net", "rt", "macros"] }
+bincode2 = "2.0.1"
+bytes = "1.4.0"
+uuid = { version = "1.3.4" }
+citadel-internal-service-types = {version="0.1.0", git="https://github.com/Avarok-Cybersecurity/citadel-workspace-core.git", package="citadel-internal-service-types"}
+citadel-internal-service-connector= {version="0.1.0", git="https://github.com/Avarok-Cybersecurity/citadel-workspace-core.git", package="citadel-internal-service-connector" }
+futures = "0.3.28"
+tokio-util = { version = "0.7.8", default-features = false }
+citadel_logging = { version = "0.7.0", default-features = false }
+# tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+log = "^0.4"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
